--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         </activity>
         <activity android:name=".SingInActivity" />
         <activity android:name=".RecyclerView" />
-        <activity android:name=".ServicosActivity"></activity>
+        <activity android:name=".ServicosActivity" />
+        <activity android:name=".fragments.PrestadosActivity"></activity>
     </application>
 
 </manifest>
