--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".SingInActivity" />
         <activity android:name=".RecyclerView" />
         <activity android:name=".ServicosActivity" />
-        <activity android:name=".fragments.PrestadosActivity"></activity>
+        <activity android:name=".fragments.PrestadosActivity" />
+        <activity android:name=".fragments.FechamnetoActivity"></activity>
     </application>
 
 </manifest>
