--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".RecyclerView" />
         <activity android:name=".ServicosActivity" />
         <activity android:name=".fragments.PrestadosActivity" />
-        <activity android:name=".fragments.FechamnetoActivity"></activity>
+        <activity android:name=".fragments.FechamnetoActivity" />
+        <activity android:name=".ServicoCadastroActivity"></activity>
     </application>
 
 </manifest>
