--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:11.0.1'
     //implementation 'com.google.firebase:firebase-auth:9.0.1'
     //implementation 'com.google.android.gms:play-services-auth:9.0.1'
+    implementation 'com.google.firebase:firebase-database:11.0.1'
     implementation 'com.google.firebase:firebase-auth:11.0.1'
     implementation 'com.google.android.gms:play-services-auth:11.0.1'
+
 }
 // Work around for onesignal-gradle-plugin compatibility
 //com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
